--- a/skyjo/src/styles/Banner.css
+++ b/skyjo/src/styles/Banner.css
@@ -1,6 +1,8 @@
 .banner-banner {
   display: flex;
   align-items: center; /* Alignement vertical */
+  border-bottom: 5px solid rgb(175, 175, 175);
+  background-color: #e6bc14e5;
 }
 
 .banner-logo {
