--- a/skyjo/src/styles/App.css
+++ b/skyjo/src/styles/App.css
@@ -36,3 +36,63 @@
     transform: rotate(360deg);
   }
 }
+
+/* App.css */
+
+.top-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #333;
+  color: white;
+}
+
+.top-nav ul {
+  list-style: none;
+  display: flex;
+}
+
+
+/* App.css */
+
+.top-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #333;
+  color: white;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  height: 60px; /* ajustez la taille selon vos besoins */
+  margin-right: 20px;
+}
+
+.logo-name {
+  margin: 0;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+}
+
+.nav-links li {
+  margin-right: 125px;
+}
+
+.nav-links a {
+  color: white;
+  text-decoration: none;
+}
+
+.nav-links a:hover {
+  text-decoration: underline;
+}
