--- a/skyjo/src/styles/Catalogue.css
+++ b/skyjo/src/styles/Catalogue.css
@@ -1,13 +1,13 @@
 .catalogue {
-    display: flex; /* Utilisation de Flexbox */
-    flex-wrap: wrap; /* Permettre le retour à la ligne */
-    justify-content: space-between; /* Espacement équivalent entre les éléments */
+    display: flex;
+    flex-wrap: wrap; /*retour à la ligne */
+    justify-content: space-between; /* espacement symétrique des éléments */
 }
 
-/* Style des produits (vous pouvez adapter selon vos besoins) */
+
 .Products {
-    width: 200px; /* Largeur des produits */
-    margin-bottom: 20px; /* Marge inférieure pour l'espacement */
+    width: 200px; 
+    margin-bottom: 20px; 
 }
 
 .titleCatalogue{
