--- a/skyjo/src/styles/Products.css
+++ b/skyjo/src/styles/Products.css
@@ -1,47 +1,46 @@
-/* Style de la div contenant les produits */
+
+
 .containerProd {
-    width: 200px; /* Largeur du conteneur */
-    border: 1px solid #ccc; /* Bordure grise */
-    border-radius: 8px; /* Coins arrondis */
-    margin: 10px; /* Marge extérieure */
-    padding: 10px; /* Remplissage intérieur */
-    position: relative; /* Position relative pour positionner les icônes */
+    width: 200px; 
+    border: 1px solid #ccc; 
+    border-radius: 8px; 
+    margin: 10px; 
+    padding: 10px; 
+    position: relative; 
   }
   
-  /* Style de l'image du produit */
+  
   .imgProd {
-    width: 100%; /* Remplir la largeur du conteneur */
-    height: auto; /* Hauteur automatique */
-    border-radius: 8px; /* Coins arrondis */
-    margin-bottom: 10px; /* Marge inférieure */
+    width: 100%; 
+    height: auto; 
+    border-radius: 8px; 
+    margin-bottom: 10px; /
   }
   
-  /* Style du titre du produit */
   .nameProd {
-    font-size: 18px; /* Taille de la police */
-    margin-bottom: 5px; /* Marge inférieure */
+    font-size: 18px; 
+    margin-bottom: 5px; 
   }
   
-  /* Style du prix du produit */
+  
   .priceProd {
-    font-size: 16px; /* Taille de la police */
-    font-weight: bold; /* Gras */
-    color: #007bff; /* Couleur bleue */
+    font-size: 16px; 
+    font-weight: bold; 
+    color: #007bff; 
   }
   
-  /* Style de l'icône du coeur */
+  
   .likeProd {
-    position: absolute; /* Position absolue */
-    top: 10px; /* Distance du haut */
-    right: 10px; /* Distance de la droite */
-    width: 20px; /* Largeur de l'icône */
+    position: absolute; 
+    top: 10px; 
+    right: 10px; 
+    width: 20px;
   }
   
-  /* Style de l'icône du caddie */
   .buyProd {
-    position: absolute; /* Position absolue */
-    bottom: 10px; /* Distance du bas */
-    right: 10px; /* Distance de la droite */
-    width: 20px; /* Largeur de l'icône */
+    position: absolute; 
+    bottom: 10px; 
+    right: 10px; 
+    width: 20px; 
   }
   
