--- a/skyjo/src/styles/Catalogue.css
+++ b/skyjo/src/styles/Catalogue.css
@@ -1,23 +1,12 @@
 .catalogue {
     display: flex;
-    flex-wrap: wrap; /*retour à la ligne */
-    justify-content: space-between; /* espacement symétrique des éléments */
-}
-
-
-.Products {
-    width: 200px; 
-    margin-bottom: 20px; 
-}
-
-.titleCatalogue{
-    padding: 20px;
-}
-
-.product {
-    width: calc(25% - 20px); /* Calcul de la largeur avec une marge de 20px entre les éléments */
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .product {
     margin-bottom: 20px;
-    position: relative; /* Permet de positionner le prix absolument par rapport au conteneur du produit */
+    position: relative;
   }
   
   .product img {
@@ -29,7 +18,7 @@
     position: absolute;
     bottom: 10px;
     left: 10px;
-    background-color: rgba(255, 255, 255, 0.7); /* Fond semi-transparent pour le prix */
     padding: 5px 10px;
     border-radius: 5px;
   }
+  
