--- a/skyjo/src/styles/Products.css
+++ b/skyjo/src/styles/Products.css
@@ -14,7 +14,7 @@
     width: 100%; 
     height: auto; 
     border-radius: 8px; 
-    margin-bottom: 10px; /
+    margin-bottom: 10px; 
   }
   
   .nameProd {
