--- a/skyjo/src/styles/Products.css
+++ b/skyjo/src/styles/Products.css
@@ -1,14 +1,14 @@
 
 
 .containerProd {
-    width: 200px; 
+    width: calc(20% - 20px); /* 4 produits par ligne */
     border: 1px solid #ccc; 
     border-radius: 8px; 
     margin: 10px; 
     padding: 10px; 
     position: relative; 
   }
-  
+
   
   .imgProd {
     width: 100%; 
