--- a/skyjo/src/styles/Products.css
+++ b/skyjo/src/styles/Products.css
@@ -43,4 +43,17 @@
     right: 10px; 
     width: 20px; 
   }
+  .containerProd.added-to-cart {
+    animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
   
