--- a/skyjo/src/styles/Favorite.css
+++ b/skyjo/src/styles/Favorite.css
@@ -1,10 +1,18 @@
 .favorite-items {
     margin-top: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+    max-width: 600px; /* Limite la largeur des favoris */
+    margin-left: auto; /* Centre les favoris horizontalement */
+    margin-right: auto; /* Centre les favoris horizontalement */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Ajoute une légère ombre */
 }
 
 .favorite-items h2 {
     font-size: 24px;
     margin-bottom: 15px;
+    text-align: center; /* Centre le titre */
 }
 
 .favorite-items ul {
@@ -13,12 +21,24 @@
 }
 
 .favorite-items li {
-    margin-bottom: 10px;
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 10px;
+    margin-bottom: 20px; /* Augmente l'espacement entre les éléments */
+    padding: 15px;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); /* Ajoute une légère ombre */
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    transition: all 0.3s ease; /* Ajoute une transition douce */
+}
+
+.favorite-items li:hover {
+    transform: translateY(-3px); /* Soulève légèrement l'élément au survol */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Augmente l'ombre au survol */
+}
+
+.favorite-items li span {
+    font-size: 18px;
 }
 
 .favorite-items li button {
@@ -26,8 +46,9 @@
     color: #fff;
     border: none;
     border-radius: 5px;
-    padding: 5px 10px;
+    padding: 8px 15px;
     cursor: pointer;
+    transition: background-color 0.3s ease; /* Ajoute une transition douce pour le changement de couleur */
 }
 
 .favorite-items li button:hover {
