--- a/skyjo/src/styles/Products.css
+++ b/skyjo/src/styles/Products.css
@@ -1,59 +1,77 @@
-
+/* Style pour tous les conteneurs de produits */
 
 .containerProd {
-    width: calc(20% - 20px); /* 4 produits par ligne */
-    border: 1px solid #ccc; 
-    border-radius: 8px; 
-    margin: 10px; 
-    padding: 10px; 
-    position: relative; 
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  margin: 10px;
+  padding: 10px;
+  position: relative;
+  width: calc(20% - 20px); 
+  overflow: hidden;
+}
 
-  
-  .imgProd {
-    width: 100%; 
-    height: auto; 
-    border-radius: 8px; 
-    margin-bottom: 10px; 
-  }
-  
-  .nameProd {
-    font-size: 18px; 
-    margin-bottom: 5px; 
-  }
-  
-  
-  .priceProd {
-    font-size: 16px; 
-    font-weight: bold; 
-    color: #007bff; 
-  }
-  
-  
-  .likeProd {
-    position: absolute; 
-    top: 10px; 
-    right: 10px; 
-    width: 20px;
-  }
-  
-  .buyProd {
-    position: absolute; 
-    bottom: 10px; 
-    right: 10px; 
-    width: 20px; 
-  }
-  .containerProd.added-to-cart {
-    animation: fadeIn 1s ease-in-out;
+
+/* Les styles pour .containerProd ont été supprimés car ils ne sont pas utilisés */
+
+/* Les autres styles sont restés inchangés */
+.containerProd .imgProd {
+  width: 100%;
+  height: auto;
+  max-height: 200px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  object-fit: cover;
+}
+
+.nameProd {
+  font-size: 18px;
+  margin-bottom: 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.priceProd {
+  font-size: 16px;
+  font-weight: bold;
+  color: #007bff;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  max-width: calc(100% - 20px);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.likeProd {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 20px;
+}
+
+.buyProd {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  width: 20px;
+}
+
+.containerProd.added-to-cart {
+  animation: fadeIn 1s ease-in-out;
 }
 
 @keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
-
-  
