--- a/skyjo/src/styles/Informations.css
+++ b/skyjo/src/styles/Informations.css
@@ -1,7 +1,7 @@
 .likeProd {
-    position: absolute; 
-    top: 10px; 
-    right: 10px;
+    position:relative; 
+    top: 50px; 
+    right: 0px;
     width: 20px;
 }
 
