--- a/skyjo/src/styles/Informations.css
+++ b/skyjo/src/styles/Informations.css
@@ -1,13 +1,86 @@
-.likeProd {
-    position: absolute; 
-    top: 10px; 
-    right: 10px;
-    width: 20px;
-}
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
 
-.buyProd {
-    position: absolute; 
-    bottom: 10px; 
-    right: 10px; 
-    width: 20px; 
-}
+  h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+  
+
+  .product-image {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+  }
+  
+  .product-info {
+    margin-bottom: 20px;
+  }
+  
+  .product-price {
+    font-size: 20px;
+    color: #B12704; 
+    margin-bottom: 10px;
+  }
+  
+  .product-description {
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+  }
+  
+
+  .image-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  
+  .image-gallery img {
+    max-width: calc(50% - 5px);
+    margin-bottom: 10px;
+  }
+  
+  .add-to-cart {
+    background-color: #4b4a49; 
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .add-to-cart:hover {
+    background-color: #46a93f; 
+  }
+  
+  .like-button {
+    width: 40px;
+    height: 50px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: transform 0.3s;
+  }
+  
+  .like-button:hover {
+    transform: scale(1.1);
+  }
+  
+  .like-icon {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  
