--- a/skyjo/src/styles/App.css
+++ b/skyjo/src/styles/App.css
@@ -13,6 +13,8 @@
   }
 }
 
+
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -37,13 +39,23 @@
   }
 }
 
+
 .top-nav {
+  position: fixed;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px; /* Ajustez la hauteur selon vos préférences */
   background-color: #333;
   color: white;
+  z-index: 1000; /* assure que la barre de navigation est au-dessus de tout autre contenu */
+}
+
+/* Ajoutez ce style pour décaler le contenu vers le bas pour éviter qu'il ne soit masqué par la barre de navigation */
+body {
+  padding-top: 40px; /* ajustez la valeur en fonction de la hauteur de votre barre de navigation */
 }
 
 .top-nav ul {
@@ -51,14 +63,7 @@
   display: flex;
 }
 
-.top-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-  background-color: #333;
-  color: white;
-}
+
 
 .logo-container {
   display: flex;
