--- a/skyjo/src/styles/Informations.css
+++ b/skyjo/src/styles/Informations.css
@@ -1,4 +1,3 @@
-/* Conteneur principal */
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -7,13 +6,13 @@
   flex-wrap: wrap;
 }
 
-/* Section d'informations */
+
 .info-section {
   flex: 1;
   padding-right: 20px;
 }
 
-/* Titres */
+
 h2 {
   font-size: 28px;
   margin-bottom: 10px;
@@ -91,7 +90,7 @@ h3 {
   object-fit: contain;
 }
 
-/* Description du produit */
+
 .product-description {
   font-size: 18px;
   line-height: 1.6;
@@ -99,26 +98,37 @@ h3 {
   margin-top: 20px;
 }
 
-/* Image principale */
+
 .image-section {
   flex: 1;
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .product-image {
   max-width: 100%;
-  height: auto;
+  height:auto;
   margin-bottom: 20px;
 }
 
-/* Galerie d'images */
 .image-gallery {
-  flex: 1;
-}
+    flex:2;
+    flex-wrap: wrap;
+    display: flex;
 
-.image-gallery img {
-  max-width: calc(33.33% - 10px);
-  margin-bottom: 10px;
-}
+    align-items: center; /* Centrage vertical */
+  }
+  
+  .image-gallery img {
+    max-width: calc(33.33% - 10px);
+    margin-bottom: 10px;
+    margin-right: 10px;
+    vertical-align: center;
+  }
 
 @media (max-width: 768px) {
   .container {
