--- a/skyjo/src/styles/Catalogue.css
+++ b/skyjo/src/styles/Catalogue.css
@@ -1,7 +1,7 @@
 .catalogue {
   display: flex;
-  flex-wrap: wrap; /*retour à la ligne */
-  justify-content: space-between; /* espacement symétrique des éléments */
+  flex-wrap: wrap; /*retour ligne */
+  justify-content: space-between; 
 }
 
 .Products {
