--- a/skyjo/src/styles/ShoppingCart.css
+++ b/skyjo/src/styles/ShoppingCart.css
@@ -6,7 +6,7 @@
   border-radius: 10px;
   background-color: #f9f9f9;
   max-width: 600px;
-  margin-left: auto; /* Centrer panier horizontalement */
+  margin-left: auto; 
   margin-right: auto;
   text-align: center;
 }
@@ -14,7 +14,7 @@
 .shopping-cart h2 {
   font-size: 24px;
   margin-bottom: 15px;
-  text-align: center; /* Centrer titre */
+  text-align: center; 
 }
 
 .shopping-cart ul {
@@ -79,6 +79,7 @@
 
 .shopping-cart .quantity-buttons button:hover {
   background-color: #0056b3; 
+  cursor: pointer;  
 }
 
 .shopping-cart .remove-button {
@@ -92,6 +93,7 @@
 
 .shopping-cart .remove-button:hover {
   background-color: #c82333; 
+  cursor: pointer;
 }
 
 .shopping-cart .total-price {
