--- a/skyjo/src/styles/Informations.css
+++ b/skyjo/src/styles/Informations.css
@@ -115,13 +115,42 @@ h3 {
   margin-bottom: 20px;
 }
 
+.zoomed-image {
+  transform: scale(2);
+  transition: transform 0.3s ease; 
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+}
+
+.modal-content {
+  max-width: 80%; 
+  max-height: 80%; 
+}
+
+.modal-img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+
+
 
 .image-gallery {
     flex:2;
     flex-wrap: wrap;
     display: flex;
 
-    align-items: center; /* Centrage vertical */
+    align-items: center; 
   }
   
   .image-gallery img {
